--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-test
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Matthew Cadugan</title>
+    </head>
+    <body>
+        <h1>Matthew Cadugan</h1>
+        <p>This webpage is for CSCE 190</p>
+    </body>
+</html>
