adding more content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     </head>
     <body>
         <h1>Matthew Cadugan</h1>
-        <p>This webpage is for CSCE 190</p>
+        <div class="about">
+            <h2>About me</h2>
+            <p>I am a curious person that wants to make enough money at my engineering job so that I can teach others music as a hobby.</p>
+        </div>
+        <div class="skills">
+            <h2>Skills</h2>
+        </div>
+        <div class="projects">
+            <h2>Highlighted projects</h2>
+        </div>
+        <div class="contact">
+            <h2>Contact me</h2>
+                <p>Email me at: mcadugan07@gmail.com</p>
+                <p>mattcadugan1 on instagram</p>
+        </div>
     </body>
 </html>
