--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="contact">
             <h2>Contact me</h2>
                 <p>Email me at: mcadugan07@gmail.com</p>
-                <p>mattcadugan1 on instagram</p>
+                <p>mattcadugan1 on Instagram</p>
         </div>
     </body>
 </html>
