this time actually bugfixing

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     </head>
     <body>
         <h1>Matthew Cadugan</h1>
-        <div class=".about">
-            <h2 class=".about">About me</h2>
+        <div class="about">
+            <h2 class="about">About me</h2>
             <p>I am a curious person that wants to make enough money at my engineering job so that I can teach others music as a hobby.</p>
         </div>
-        <div class=".skills">
-            <h2 class=".skills">Skills</h2>
+        <div class="skills">
+            <h2 class="skills">Skills</h2>
         </div>
-        <div class=".projects">
-            <h2 class=".projects">Highlighted projects</h2>
+        <div class="projects">
+            <h2 class="projects">Highlighted projects</h2>
         </div>
-        <div class=".contact">
-            <h2 class=".contact">Contact me</h2>
+        <div class="contact">
+            <h2 class="contact">Contact me</h2>
                 <p>Email me at: mcadugan07@gmail.com</p>
                 <p>mattcadugan1 on Instagram</p>
         </div>
