--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         </div>
         <div class="projects">
             <h2>Highlighted projects</h2>
+            <!-- Problem Statement Assignment -->
+                <section class="project">
+                <a href="files.pdf"><h3>Problem Statement</h3></a>
+                <a href="files.pdf"><img src="images.png"></a>
+                <p>Students at USC need a way to see their grades throughout the semester easily.</p>
+            </section>
         </div>
         <div class="contact">
             <h2>Contact me</h2>
