--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h2>Highlighted projects</h2>
             <!-- Problem Statement Assignment -->
                 <section class="project">
-                <a href="files.pdf"><h3>Problem Statement</h3></a>
-                <a href="files.pdf"><img src="images.png"></a>
+                <a href="Problem Statement-1.pdf"><h3>Problem Statement</h3></a>
+                <a href="Problem Statement-1.pdf"><img src="problem statement.png"></a>
                 <p>Students at USC need a way to see their grades throughout the semester easily.</p>
             </section>
         </div>
