--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
         </div>
         <div class="projects">
             <h2>Highlighted projects</h2>
-            <!-- Problem Statement Assignment -->
                 <section class="project">
-                <a href="Problem Statement-1.pdf"><h3>Problem Statement</h3></a>
-                <a href="Problem Statement-1.pdf"><img src="problem statement.png"></a>
+                <a href="files/Problem Statement-1.pdf"><h3>Problem Statement</h3></a>
+                <a href="files/Problem Statement-1.pdf"><img src="images/problem statement.png"></a>
                 <p>Students at USC need a way to see their grades throughout the semester easily.</p>
+            </section>
+            <section class="project">
+                <a href="files/Affinity Diagram.pdf"><h3>Affinity Diagram</h3></a>
+                <a href="files/Affinity Diagram.pdf"><img src="images/Affinity Diagram.png"></a>
+                <p>This is an affinity diagram about my problem statement.</p>
             </section>
         </div>
         <div class="contact">
