--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <h2>Highlighted projects</h2>
                 <section class="project">
                 <a href="files/Problem Statement-1.pdf"><h3>Problem Statement</h3></a>
-                <a href="files/Problem Statement-1.pdf"><img src="images/problem statement.png"></a>
+                <a href="files/Problem Statement-1.pdf"><img height="60%" width="100%" src="images/problem statement.png"></a>
                 <p>Students at USC need a way to see their grades throughout the semester easily.</p>
             </section>
             <section class="project">
                 <a href="files/Affinity Diagram.pdf"><h3>Affinity Diagram</h3></a>
-                <a href="files/Affinity Diagram.pdf"><img src="images/Affinity Diagram.png"></a>
+                <a href="files/Affinity Diagram.pdf"><img height="80%" width="80%" src="images/Affinity Diagram.png"></a>
                 <p>This is an affinity diagram about my problem statement.</p>
             </section>
         </div>
