--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         </div>
         <div class="skills">
             <h2>Skills</h2>
+            <span>
+                My resume: <a href="files/Resume final-1.pdf">PDF version</a>
+                | <a href="resume.html">HTML version</a>
+            </span>
         </div>
         <div class="projects">
             <h2>Highlighted projects</h2>
@@ -25,6 +29,17 @@
                 <a href="files/Affinity Diagram.pdf"><img height="60%" width="80%" src="images/Affinity Diagram.png"></a>
                 <p>This is an affinity diagram about my problem statement.</p>
             </section>
+                <section class="project">
+                <a href="files/Sketches.pdf"><h3>Sketches</h3></a>
+                <a href="files/Sketches.pdf"><img height = 70% width = 70% src="images/Sketches.png"></a>
+                <p>These are rough sketches that show the process of using this app.</p>
+                </section>
+            <section class ="project">
+                <a href="https://github.com/mcadugan/modes-helper"><h3>Modes Helper</h3></a>
+                <a href="https://github.com/mcadugan/modes-helper"><img height = 70% width = 70% src= "images/modes.png"></a>
+                <p>This is a Java program in order to help musicians learn all the modes of all the scales. I intend to make this a website and make it easier to use!</p>
+            </section>
+
         </div>
         <div class="contact">
             <h2>Contact me</h2>
